spade-tests/src/snapshots/spade_tests__parser__register_count_is_required.snap
---
source: spade-tests/src/parser.rs
---
pipeline(3) main(x: X) -> int<8> {
    reg *;
}


error: expected register count, got `;`
  ┌─ testinput:2:10
  │
2 │     reg *;
  │          ^ expected register count here
  │
  = help: register counts can only be integer constants
